[gd_scene load_steps=12 format=3 uid="uid://dmo8iruscdtfh"]

[ext_resource type="Script" uid="uid://brmk65llvp3pv" path="res://scenes/menus/leaderboard submit/leaderboard_submit.gd" id="1_lel36"]
[ext_resource type="Texture2D" uid="uid://cbml52o5ut3n" path="res://assets/background/background.png" id="2_ahi2g"]
[ext_resource type="Texture2D" uid="uid://cymnmnks1sxto" path="res://assets/flame/flame_2.png" id="3_vwbb5"]
[ext_resource type="Texture2D" uid="uid://eo7xll3s1jd1" path="res://assets/flame/flame_1.png" id="4_i1oh2"]
[ext_resource type="Texture2D" uid="uid://d304avqfvx4u1" path="res://assets/food/burger/burger_cooked.png" id="5_3amk6"]
[ext_resource type="Texture2D" uid="uid://cp8v8li15ikfx" path="res://assets/food/sausage/sausage_cooked.png" id="6_ek853"]
[ext_resource type="Theme" uid="uid://8n7hmf7q53wo" path="res://assets/themes/dynapuff.tres" id="7_d208j"]
[ext_resource type="AudioStream" uid="uid://bb8jqc0byymq0" path="res://assets/sfx/voiceover/high_score.wav" id="8_ahi2g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ugfu2"]
atlas = ExtResource("3_vwbb5")
region = Rect2(0, 0, 295, 236)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssxho"]
atlas = ExtResource("4_i1oh2")
region = Rect2(0, 0, 295, 236)

[sub_resource type="SpriteFrames" id="SpriteFrames_mx208"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugfu2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssxho")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[node name="LeaderboardSubmit" type="Node2D"]
script = ExtResource("1_lel36")
lb_scene = "res://scenes/menus/high scores/high_scores.tscn"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(480, 270)
texture = ExtResource("2_ahi2g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/Sprite2D"]
position = Vector2(255, -110)
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("SpriteFrames_mx208")
autoplay = "default"

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Sprite2D"]
position = Vector2(-300, 0)
texture = ExtResource("5_3amk6")

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer/Sprite2D"]
position = Vector2(-150, 0)
texture = ExtResource("6_ek853")

[node name="Sprite2D3" type="Sprite2D" parent="CanvasLayer/Sprite2D"]
position = Vector2(300, 0)
texture = ExtResource("5_3amk6")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 960.0
offset_bottom = 540.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="CanvasLayer"]
offset_right = 960.0
offset_bottom = 100.0
theme = ExtResource("7_d208j")
text = "New High Score!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnterInitalsLabel" type="Label" parent="CanvasLayer"]
offset_top = 100.0
offset_right = 960.0
offset_bottom = 200.0
theme = ExtResource("7_d208j")
theme_override_font_sizes/font_size = 36
text = "Enter your initials"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Letter1" type="Label" parent="CanvasLayer"]
offset_left = 405.0
offset_top = 220.0
offset_right = 455.0
offset_bottom = 320.0
theme = ExtResource("7_d208j")
theme_override_font_sizes/font_size = 72
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Letter2" type="Label" parent="CanvasLayer"]
offset_left = 455.0
offset_top = 220.0
offset_right = 505.0
offset_bottom = 320.0
theme = ExtResource("7_d208j")
theme_override_font_sizes/font_size = 72
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Letter3" type="Label" parent="CanvasLayer"]
offset_left = 505.0
offset_top = 220.0
offset_right = 555.0
offset_bottom = 320.0
theme = ExtResource("7_d208j")
theme_override_font_sizes/font_size = 72
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoLabel" type="Label" parent="CanvasLayer"]
offset_top = 342.0
offset_right = 960.0
offset_bottom = 442.0
theme = ExtResource("7_d208j")
theme_override_font_sizes/font_size = 20
text = "WASD to enter your initals
Enter to Confirm"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeaderboardButton" type="Button" parent="CanvasLayer"]
visible = false
offset_left = 360.0
offset_top = 475.0
offset_right = 600.0
offset_bottom = 518.0
theme = ExtResource("7_d208j")
text = "View Leaderboard"

[node name="HighScoreSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_ahi2g")

[connection signal="pressed" from="CanvasLayer/LeaderboardButton" to="." method="_on_leaderboard_button_pressed"]
